--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,11 @@
 <body>
     
     <div class="browse">
+        <p>GPT Oversetter</p>
         <a href="/">Main Page</a>
         <a href="/register">Register</a>
         <a href="/login">Login</a>
+        <p>GPT Oversetter</p>
     </div>
     {% block body %}
     {% endblock %}
