--- a/templates/login.html
+++ b/templates/login.html
@@ -7,15 +7,14 @@
 <h1>Login</h1>
 <div>
     <form action="/login" method="POST">
-
-        <label for="name">Name:</label>
-        <input type="name" id="name" name="name" required>
+        <label for="navn">Name:</label>
+        <input type="text" id="navn" name="navn" required>
     
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <label for="passord">Password:</label>
+        <input type="password" id="passord" name="passord" required>
     
         <button type="submit">Login</button>
-    </form>
+    </form>    
     <p>Don't have an account: <a href="/register">Register</a></p>
 </div>
 
