--- a/templates/register.html
+++ b/templates/register.html
@@ -6,18 +6,16 @@
 
 <h1>Register</h1>
 <div class="register">
-  <form action="/register" method="POST">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
- 
-      <label for="email">Mail:</label>
-      <input type="email" id="email" name="email" required>
- 
-      <label for="passord">Password:</label>
-      <input type="password" id="password" name="password" required>      
- 
-      <button type="submit">Register</button>
-  </form>
+    <form action="/registerRegister" method="POST">
+        <label for="navn">Name:</label>
+        <input type="text" id="navn" name="navn" required>
+    
+        <label for="passord">Password:</label>
+        <input type="password" id="passord" name="passord" required>
+    
+        <button type="submit">Register</button>
+    </form>
+    
     <p>Already have an account: <a href="/login">login</a></p>
 </div>
 {% endblock %}
