--- a/templates/order.html
+++ b/templates/order.html
@@ -3,7 +3,9 @@
 {% block title %}Order{% endblock %}
 
 {% block body %}
+<div class="container">
 
-<h1>Here you can put in your order :-)</h1>
-
+    <h1>Here you can put in your order :-)</h1>
+    
+</div>
 {% endblock %}
