--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .browse {
-    background-color: rgb(73, 73, 73);
+    background-color:   black;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -14,7 +14,7 @@ body {
     padding-bottom: 1vh;
 }
 
-.browse a {
+.browse p {
     text-decoration: none;
     color: white;
 }
@@ -26,8 +26,9 @@ footer {
     padding-top: 3%;
 }
 
-body {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
