--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 {% block title %}Main Page{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Welcome to Geir Petter Torgersen's Website</h1>
     <a href="/login">Login</a>
     <a href="/register">Register</a>
+</div>
 {% endblock %}
