--- a/templates/register.html
+++ b/templates/register.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 
+<div class="container">
 <h1>Register</h1>
-<div class="register">
     <form action="/registerRegister" method="POST">
         <label for="navn">Name:</label>
         <input type="text" id="navn" name="navn" required>
